--- a/examples/lwc-kitchen-sink/package.json
+++ b/examples/lwc-kitchen-sink/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@storybook/framework": "*",
+    "@storybook/lwc": "*",
     "@storybook/addon-a11y": "6.0.0-alpha.2",
     "@storybook/addon-actions": "6.0.0-alpha.2",
     "@storybook/addon-backgrounds": "6.0.0-alpha.2",
