--- a/app/lwc/package.json
+++ b/app/lwc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@storybook/framework",
+  "name": "@storybook/lwc",
   "version": "0.0.1",
   "description": "Storybook for framework: View framework components in isolation with hot reloading.",
   "keywords": [
@@ -97,8 +97,21 @@
     "webpack": "^4.30",
     "webpack-dev-server": "^3.3",
     "webpack-merge": "^4.2.1"
-
   },
+  "devDependencies": {
+    "@oclif/dev-cli": "^1",
+    "@oclif/test": "^1",
+    "@types/chai": "^4",
+    "@types/mocha": "^5",
+    "@types/node": "^12",
+    "@types/rimraf": "^2.0.2",
+    "@types/semver-compare": "^1.0.0",
+    "@types/webpack": "^4.4.27",
+    "@types/webpack-merge": "^4.1.4",
+    "@typescript-eslint/parser": "^2.3.1",
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "cli-ux": "^5.2.1"
+},
   "peerDependencies": {
     "babel-loader": "^7.0.0 || ^8.0.0"
   },
