--- a/app/framework/package.json
+++ b/app/framework/package.json
@@ -31,6 +31,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@storybook/addons": "6.0.0-alpha.2",
     "@storybook/core": "6.0.0-alpha.2",
     "@storybook/client-api": "6.0.0-alpha.2",
@@ -44,7 +49,18 @@
     "babel-loader": "^8.0.6",
     "html-loader": "^0.5.5",
     "regenerator-runtime": "^0.13.3",
-    "ts-dedent": "^1.1.0"
+    "ts-dedent": "^1.1.0",
+    "@lwc/eslint-plugin-lwc": "^0.8",
+    "@lwc/jest-preset": "muenzpraeger/lwc-jest-preset-ts-fix",
+    "@lwc/jest-resolver": "muenzpraeger/lwc-jest-resolver-resolution-fix",
+    "@lwc/jest-serializer": "1.1.0-alpha1",
+    "@lwc/jest-transformer": "muenzpraeger/lwc-jest-transformer-ts-fix",
+    "@lwc/rollup-plugin": "^1.1.1",
+    "lwc": "^1.1.1",
+    "jest": "~24",
+    "wdio-lwc-service": "^0.1",
+    "eslint": "^6.3",
+    "eslint-plugin-wdio": "^5.7.8"
   },
   "peerDependencies": {
     "babel-loader": "^7.0.0 || ^8.0.0"
