--- a/app/framework/package.json
+++ b/app/framework/package.json
@@ -60,7 +60,11 @@
     "jest": "~24",
     "wdio-lwc-service": "^0.1",
     "eslint": "^6.3",
-    "eslint-plugin-wdio": "^5.7.8"
+    "eslint-plugin-wdio": "^5.7.8",
+    "webpack-merge": "^4.2.1"
+  },
+  "devDependencies": {
+    "@types/webpack-merge": "4.1.3"
   },
   "peerDependencies": {
     "babel-loader": "^7.0.0 || ^8.0.0"
