--- a/app/lwc/package.json
+++ b/app/lwc/package.json
@@ -44,7 +44,9 @@
     "babel-loader": "^8.0.6",
     "html-loader": "^0.5.5",
     "regenerator-runtime": "^0.13.3",
-    "ts-dedent": "^1.1.0"
+    "ts-dedent": "^1.1.0",
+    "lwc-webpack-plugin": "^0.4.0",
+    "@salesforce-ux/design-system": "2.11.0-beta.1"
   },
   "peerDependencies": {
     "babel-loader": "^7.0.0 || ^8.0.0"
